// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdminSettings.vue Authorization Method view mode form complete should show field values and hide the form completed with oauth2 auth method 1`] = `
Wrapper {
  "selector": ".authorization-method",
}
`;

exports[`AdminSettings.vue Authorization Method view mode form complete should show field values and hide the form completed with oidc auth method 1`] = `
Wrapper {
  "selector": ".authorization-method",
}
`;

exports[`AdminSettings.vue Nextcloud OAuth values form edit mode should show the form and hide the field values 1`] = `
Wrapper {
  "selector": ".nextcloud-oauth-values",
}
`;

exports[`AdminSettings.vue Nextcloud OAuth values form view mode with complete values should show the field values and hide the form 1`] = `
Wrapper {
  "selector": ".nextcloud-oauth-values",
}
`;

exports[`AdminSettings.vue OIDC authorization settings form complete: view mode supported user_oidc app disabled should show field values and hide authorization settings form 1`] = `
<div
  class="authorization-settings"
>
  <formheading-stub
    haserror="true"
    index="3"
    iscomplete="true"
    title="Authorization settings"
  />
   
  <errornote-stub
    errorlink="http://localhost/settings/apps/files/user_oidc"
    errorlinklabel="Download and enable it"
    errormessage="This app is required to use the OIDC authorization method"
    errortitle="The "{app}" app is not installed"
  />
   
  <!---->
   
  <div
    class="authorization-settings--content"
  >
    <fieldvalue-stub
      class="pb-1"
      isrequired="true"
      title="OIDC Provider Type"
    />
     
    <!---->
     
    <fieldvalue-stub
      class="pb-1"
      isrequired="true"
      title="OpenProject client ID"
      value="some-target-aud-client-id"
    />
  </div>
   
  <div
    class="form-actions"
  >
    <ncbutton-stub
      alignment="center"
      data-test-id="reset-auth-settings-btn"
      disabled="true"
      nativetype="button"
      type="secondary"
    >
      
				Edit authorization settings
			
    </ncbutton-stub>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`AdminSettings.vue OIDC authorization settings form complete: view mode supported user_oidc app enabled should show configured OIDC authorization 1`] = `
<div
  class="authorization-settings"
>
  <formheading-stub
    index="3"
    iscomplete="true"
    title="Authorization settings"
  />
   
  <!---->
   
  <!---->
   
  <div
    class="authorization-settings--content"
  >
    <fieldvalue-stub
      class="pb-1"
      isrequired="true"
      title="OIDC Provider Type"
      value="nextcloud_hub"
    />
     
    <!---->
     
    <fieldvalue-stub
      class="pb-1"
      isrequired="true"
      title="OpenProject client ID"
      value="some-target-aud-client-id"
    />
  </div>
   
  <div
    class="form-actions"
  >
    <ncbutton-stub
      alignment="center"
      data-test-id="reset-auth-settings-btn"
      nativetype="button"
      type="secondary"
    >
      
				Edit authorization settings
			
    </ncbutton-stub>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`AdminSettings.vue OIDC authorization settings form complete: view mode unsupported user_oidc app enabled should show field values and hide authorization settings form 1`] = `
<div
  class="authorization-settings"
>
  <formheading-stub
    haserror="true"
    index="3"
    iscomplete="true"
    title="Authorization settings"
  />
   
  <!---->
   
  <errornote-stub
    errorlink="http://localhost/settings/apps/files/user_oidc"
    errorlinklabel="Download and enable it"
    errormessage="Requires app version "{minimumAppVersion}" or later"
    errortitle="The "{app}" app is not supported"
  />
   
  <div
    class="authorization-settings--content"
  >
    <fieldvalue-stub
      class="pb-1"
      isrequired="true"
      title="OIDC Provider Type"
    />
     
    <!---->
     
    <fieldvalue-stub
      class="pb-1"
      isrequired="true"
      title="OpenProject client ID"
      value="some-target-aud-client-id"
    />
  </div>
   
  <div
    class="form-actions"
  >
    <ncbutton-stub
      alignment="center"
      data-test-id="reset-auth-settings-btn"
      disabled="true"
      nativetype="button"
      type="secondary"
    >
      
				Edit authorization settings
			
    </ncbutton-stub>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`AdminSettings.vue OIDC authorization settings form complete: view mode with external SSO provider should show configured OIDC authorization 1`] = `
<div
  class="authorization-settings"
>
  <formheading-stub
    index="3"
    iscomplete="true"
    title="Authorization settings"
  />
   
  <!---->
   
  <!---->
   
  <div
    class="authorization-settings--content"
  >
    <fieldvalue-stub
      class="pb-1"
      isrequired="true"
      title="OIDC Provider Type"
      value="external"
    />
     
    <fieldvalue-stub
      class="pb-1"
      isrequired="true"
      title="OIDC Provider"
      value="some-oidc-provider"
    />
     
    <fieldvalue-stub
      class="pb-1"
      isrequired="true"
      title="OpenProject client ID"
      value="some-target-aud-client-id"
    />
  </div>
   
  <div
    class="form-actions"
  >
    <ncbutton-stub
      alignment="center"
      data-test-id="reset-auth-settings-btn"
      nativetype="button"
      type="secondary"
    >
      
				Edit authorization settings
			
    </ncbutton-stub>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`AdminSettings.vue OpenProject OAuth values form edit mode should show the form and hide the field values 1`] = `
Wrapper {
  "selector": ".openproject-oauth-values",
}
`;

exports[`AdminSettings.vue OpenProject OAuth values form view mode and completed state should show field values and hide the form if server host form is complete 1`] = `
Wrapper {
  "selector": ".openproject-oauth-values",
}
`;

exports[`AdminSettings.vue Project folders form (Project Folder Setup) view mode without project folder setup should show status as "Inactive" 1`] = `
Wrapper {
  "selector": ".project-folder-setup",
}
`;

exports[`AdminSettings.vue default user configurations form should be visible when the integration is complete 1`] = `
ErrorWrapper {
  "selector": ".default-prefs",
}
`;

exports[`AdminSettings.vue server host url form edit mode cancel button should be visible when the form is in completed state with edit mode 1`] = `
VueWrapper {
  "_emitted": {},
  "_emittedByOrder": [],
  "isFunctionalComponent": undefined,
  "selector": "[data-test-id="cancel-edit-server-host-btn"]",
}
`;

exports[`AdminSettings.vue server host url form edit mode readonly state should clear the readonly state when clicked on the input 1`] = `
Wrapper {
  "selector": "#openproject-oauth-instance > .text-input-input-wrapper > input",
}
`;

exports[`AdminSettings.vue server host url form edit mode readonly state should set the input field to readonly at first 1`] = `
Wrapper {
  "selector": "#openproject-oauth-instance > .text-input-input-wrapper > input",
}
`;

exports[`AdminSettings.vue server host url form edit mode submit button should set the input to error state and display correct message when the url is invalid 1`] = `
VueWrapper {
  "_emitted": {
    "focus": [
      [
        FocusEvent {
          "isTrusted": true,
        },
      ],
    ],
  },
  "_emittedByOrder": [
    {
      "args": [
        FocusEvent {
          "isTrusted": true,
        },
      ],
      "name": "focus",
    },
  ],
  "isFunctionalComponent": undefined,
  "selector": ".text-input",
}
`;

exports[`AdminSettings.vue server host url form edit mode submit button should set the input to error state and display correct message when the url is invalid 2`] = `
VueWrapper {
  "_emitted": {
    "focus": [
      [
        FocusEvent {
          "isTrusted": true,
        },
      ],
    ],
  },
  "_emittedByOrder": [
    {
      "args": [
        FocusEvent {
          "isTrusted": true,
        },
      ],
      "name": "focus",
    },
  ],
  "isFunctionalComponent": undefined,
  "selector": ".text-input",
}
`;

exports[`AdminSettings.vue server host url form edit mode submit button should set the input to error state and display correct message when the url is invalid 3`] = `
VueWrapper {
  "_emitted": {
    "focus": [
      [
        FocusEvent {
          "isTrusted": true,
        },
      ],
    ],
  },
  "_emittedByOrder": [
    {
      "args": [
        FocusEvent {
          "isTrusted": true,
        },
      ],
      "name": "focus",
    },
  ],
  "isFunctionalComponent": undefined,
  "selector": ".text-input",
}
`;

exports[`AdminSettings.vue server host url form edit mode submit button should set the input to error state and display correct message when the url is invalid 4`] = `
VueWrapper {
  "_emitted": {
    "focus": [
      [
        FocusEvent {
          "isTrusted": true,
        },
      ],
    ],
  },
  "_emittedByOrder": [
    {
      "args": [
        FocusEvent {
          "isTrusted": true,
        },
      ],
      "name": "focus",
    },
  ],
  "isFunctionalComponent": undefined,
  "selector": ".text-input",
}
`;

exports[`AdminSettings.vue server host url form edit mode submit button should set the input to error state and display correct message when the url is invalid 5`] = `
VueWrapper {
  "_emitted": {
    "focus": [
      [
        FocusEvent {
          "isTrusted": true,
        },
      ],
    ],
  },
  "_emittedByOrder": [
    {
      "args": [
        FocusEvent {
          "isTrusted": true,
        },
      ],
      "name": "focus",
    },
  ],
  "isFunctionalComponent": undefined,
  "selector": ".text-input",
}
`;

exports[`AdminSettings.vue server host url form edit mode submit button should set the input to error state and display correct message when the url is invalid 6`] = `
VueWrapper {
  "_emitted": {
    "focus": [
      [
        FocusEvent {
          "isTrusted": true,
        },
      ],
    ],
  },
  "_emittedByOrder": [
    {
      "args": [
        FocusEvent {
          "isTrusted": true,
        },
      ],
      "name": "focus",
    },
  ],
  "isFunctionalComponent": undefined,
  "selector": ".text-input",
}
`;

exports[`AdminSettings.vue server host url form edit mode submit button should set the input to error state and display correct message when the url is invalid 7`] = `
VueWrapper {
  "_emitted": {
    "focus": [
      [
        FocusEvent {
          "isTrusted": true,
        },
      ],
    ],
  },
  "_emittedByOrder": [
    {
      "args": [
        FocusEvent {
          "isTrusted": true,
        },
      ],
      "name": "focus",
    },
  ],
  "isFunctionalComponent": undefined,
  "selector": ".text-input",
}
`;

exports[`AdminSettings.vue server host url form edit mode submit button should set the input to error state and display correct message when the url is invalid 8`] = `
VueWrapper {
  "_emitted": {
    "focus": [
      [
        FocusEvent {
          "isTrusted": true,
        },
      ],
    ],
  },
  "_emittedByOrder": [
    {
      "args": [
        FocusEvent {
          "isTrusted": true,
        },
      ],
      "name": "focus",
    },
  ],
  "isFunctionalComponent": undefined,
  "selector": ".text-input",
}
`;

exports[`AdminSettings.vue server host url form edit mode submit button should set the input to error state and display correct message when the url is invalid 9`] = `
VueWrapper {
  "_emitted": {
    "focus": [
      [
        FocusEvent {
          "isTrusted": true,
        },
      ],
    ],
  },
  "_emittedByOrder": [
    {
      "args": [
        FocusEvent {
          "isTrusted": true,
        },
      ],
      "name": "focus",
    },
  ],
  "isFunctionalComponent": undefined,
  "selector": ".text-input",
}
`;

exports[`AdminSettings.vue server host url form view mode and completed state reset button should be visible when the form is in completed state 1`] = `
VueWrapper {
  "_emitted": {},
  "_emittedByOrder": [],
  "isFunctionalComponent": undefined,
  "selector": "[data-test-id="reset-server-host-btn"]",
}
`;

exports[`AdminSettings.vue server host url form view mode and completed state should show field value and hide the input field 1`] = `
Wrapper {
  "selector": ".openproject-server-host",
}
`;
